update next/previous button

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@ The main image browser
             <div class="col-10">
                 <div class="form-group form-inline justify-content-center search-bar">
                     <!-- <a href="http://keyvis.org/index.php" target="_blank"><img src="public/images/keyvisicon2.png" id="keyvis-icon"></a> -->
-                    Query by Terms &nbsp;
+                    Search within &nbsp;
                     <!-- <label>Paper keyword(s) search: </label> &nbsp;&nbsp;&nbsp;&nbsp; -->
                     <select class="selectpicker" id="searchModeSelect">
-                        <option value="1">in product's description keywords</option>
-                        <option value="2">in name & strain</option>
+                        <option value="1">product description keywords</option>
+                        <option value="2">name & strain</option>
                     </select>&nbsp;&nbsp;
 
                     <div class="autocomplete">
@@ -95,7 +95,7 @@ The main image browser
                             title="change figure size" class="custom-range" value="25" min="12" max="100" />+
                     </form>
                     <img src="public/images/bootstrap_icons/brick.png" class="mode-icon" id="image-mode" data-toggle="tooltip"
-                        data-html="true" title="Figure view"> &nbsp;&nbsp;
+                        data-html="true" title="Use slider to adjust image size!"> &nbsp;&nbsp;
                     <!-- <img src="public/images/bootstrap_icons/card.png" class="mode-icon" id="card-mode" data-toggle="tooltip"
                         data-html="true" title="Paper Card view"> &nbsp;&nbsp;
                     <img src="public/images/bootstrap_icons/list.png" class="mode-icon" id="paper-mode" data-toggle="tooltip"
