Update copyright of images

--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@ The main image browser
                 <hr>
                 <div class="row">
                     <div class="col-12 gray-font" style="font-size:0.5rem;">
-                        © 2020 IEEE. Personal use of this material is permitted. Permission from IEEE must be obtained
-                        for all other uses, in any current or future media, including reprinting/republishing this
-                        material for advertising or promotional purposes, creating new collective
-                        works, for resale or redistribution to servers or lists, or reuse of any copyrighted component
-                        of this work in other works.
+                        Personal academic use of the included images is permitted under fair use. Permission from Leafly Holdings, Inc. or the respective product brand owners must be obtained for all other uses, in any current or future media, including reprinting or republishing this material for commercial, promotional, or redistributive purposes; creating derivative works; or incorporating any copyrighted component into new works.
+            
+                        Strain images are  © Leafly Holdings, Inc.
+
+                        Product images are © the respective cannabis brands or retailers as displayed on Leafly.
                     </div>
                 </div>
 
